--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section>
     <div>
       <h2>Photo - Titre H2</h2>
-      <p>img Pour une Image</p>
+      <p><strong>img</strong> Pour une Image</p>
       <img src="./files/img-1.jpg" alt="image-arbre" height="300px" />
     </div>
 
@@ -131,16 +131,17 @@
   <br />
   <!-- Mail & envoi de fichiers -->
   <footer>
-    <a href="mailto:fs@gmail.com">Ecrivez-moi !</a>
-    <br><br>
-    <a ref="notice.txt" download="nom-du-fichier">Télécharger la notice</a>
-    <br><br>
     <details>
       <summary>Plus d'infos</summary>
       <p>
         details pour un menu et summary pour le titre
       </p>
     </details>
+    <br>
+    <a href="mailto:noahseitier@gmail.com">Ecrivez-moi !</a>
+    <br><br>
+    <a ref="notice.txt" download="nom-du-fichier">Télécharger la notice</a>
+    <br><br>
   </footer>
 </body>
 </html>
