--- a/index.html
+++ b/index.html
@@ -59,27 +59,30 @@
             <th>Col 1</th>
             <th>Col 2</th>
             <th>Col 3</th>
+            <th>Col 4</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td rowspan="2">Row 1 Cell 1</td>
-            <td>Row 1 Cell 2</td>
+            <td rowspan="3">Row 1 Cell 1</td>
+            <td rowspan="2">Row 1 Cell 2</td>
             <td>Row 1 Cell 3</td>
+            <td>Row 1 Cell 4</td>
           </tr>
           <tr>
-            <td>Row 2 Cell 2</td>
             <td>Row 2 Cell 3</td>
+            <td>Row 2 Cell 4</td>
           </tr>
           <tr>
-            <td colspan="3">Row 3 Cell 1</td>
+            <td colspan="2">Row 3 Cell 2</td>
+            <td>Row 3 Cell 4</td>
           </tr>
         </tbody>
       </table>
     </div>
-
+    <!-- Liens-->
     <div>
-      <h5><span>&#9814;</span> Liens - Titre H5</h5>
+      <h5>Liens - Titre H5</h5>
       <a href="https://htmlcheatsheet.com/" target="_blank">HTML Cheatsheet</a>
       <br><br>
       <a href="https://htmlcheatsheet.com/css/" target="_blank">CSS Cheatsheet</a>
@@ -95,7 +98,7 @@
   <br />
   <!-- Formulaires en HTML -->
   <section>
-    <h2>Formulaire</h2>
+    <h6>Formulaire</h6>
     <form action="/action.php" method="post">
       <label for="name">Nom</label>
       <input id="name" type="text" placeholder="Entrez votre nom" /><br />
